# pm

./: .dockerignore  CLAUDE.md  Dockerfile
.claude/: settings.local.json
backend/: database.py  main.py  models.py  pyproject.toml
backend/tests/: conftest.py  test_ai.py  test_auth.py  test_board.py  test_main.py
data/: kanban.db
docs/: PLAN.md  ai.md  database.md
frontend/: CLAUDE.md
frontend/src/app/login/: page.tsx
frontend/src/components/: AIChatSidebar.tsx  KanbanBoard.test.tsx  KanbanBoard.tsx
frontend/src/lib/: kanban.ts
frontend/src/test/: setup.ts
frontend/tests/: auth.spec.ts  kanban.spec.ts
scripts/: start.bat  start.sh  stop.bat  stop.sh
